Fix spacing issues with view more button on studies page

--- a/internhacks/static/main.css
+++ b/internhacks/static/main.css
@@ -296,41 +296,3 @@ ul#horizontal-list li a {
 .hide-me[aria-expanded="true"] {
   display: none;
 }
-
-
-/* Home Page Card Carousel */
-
-@media (max-width: 768px) {
-  .recipe-carousel-inner .recipe-carousel-item>div {
-    display: none;
-  }
-
-  .recipe-carousel-inner .recipe-carousel-item>div:first-child {
-    display: block;
-  }
-}
-
-.recipe-carousel-inner .recipe-carousel-item.active,
-.recipe-carousel-inner .recipe-carousel-item-next,
-.recipe-carousel-inner .recipe-carousel-item-prev {
-  display: flex;
-}
-
-/* display 3 */
-@media (min-width: 768px) {
-
-  .recipe-carousel-inner .recipe-carousel-item-right.active,
-  .recipe-carousel-inner .recipe-carousel-item-next {
-    transform: translateX(33.333%);
-  }
-
-  .recipe-carousel-inner .recipe-carousel-item-left.active,
-  .recipe-carousel-inner .recipe-carousel-item-prev {
-    transform: translateX(-33.333%);
-  }
-}
-
-.recipe-carousel-inner .recipe-carousel-item-right,
-.recipe-carousel-inner .recipe-carousel-item-left {
-  transform: translateX(0);
-}
